--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">RawMaterial</string>
 
     <string name="action_settings">Settings</string>
+    <string name="material_name">库位</string>
+    <string name="material_value">线径</string>
     <string name="play_error_message">Impossible to play the video.</string>
     <string name="play_progressive_error_message">Impossible to play the progressive video.</string>
 </resources>
