--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,15 @@
     <string name="action_settings">Settings</string>
     <string name="material_name">库位</string>
     <string name="material_value">线径</string>
+    <string name="intime_value">入库时间</string>
     <string name="play_error_message">Impossible to play the video.</string>
     <string name="play_progressive_error_message">Impossible to play the progressive video.</string>
 
 
+    <string name="raw_title">原材料库存</string>
+
     <!-- 字符串匹配的锁定屏幕显示日期的格式. MM/dd/yyy-->
-    <string name="abbrev_wday_month_day_no_year">yyyy年MM月dd日</string>
+    <string name="abbrev_wday_month_day_no_year">yyyy/MM/dd</string>
     <!-- Format for describing the date, for accessibility. -->
     <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
     <!-- Default clock style. -->
